--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             </div>
             <div class="button">
                 <img class="icon4" src="img/camera-video-fill.svg" alt="">
-                <h3>mute</h3>
+                <h3>Stop video</h3>
             </div>
             <div class="arrow-up">
                 <img src="img/chevron-up.svg" alt="">
